<resources>
    <string name="app_name">In.Dreams</string>
    <string name="app_name_phone">Insomniac Dreams</string>
    <string name="email_textview">Email</string>
    <string name="name_textview">Name</string>
    <string name="surname_textview">Surname</string>
    <string name="password_textview">Password</string>
    <string name="confirm_password_textview">Confirm password</string>
    <string name="button_sing_in">SING IN</string>
    <string name="answer_label">Do not have an account?</string>
    <string name="sing_up_label"><u>SING UP NOW</u>.</string>
    <string name="registration_label">Registration</string>
    <string name="button_sing_up">SING UP</string>
    <string name="menu_journal">Journal</string>
    <string name="menu_statistics">Statistics</string>
    <string name="menu_dream_book">Dream Book</string>
    <string name="search_hint">Search Here...</string>
    <string name="search_back">Search</string>
    <string name="quote">Always in dreams</string>
    <string name="nodreamsremind">You have not yet created dream records</string>
    <string name="button_create_dream">Create</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_done">Done</string>
    <string name="btn_photo">Edit picture</string>
    <string name="btn_log_ot">Log out from account</string>
    <string name="label_account">Edit Profile</string>
    <string name="bio">Bio</string>
    <string name="dream_label">Dream</string>
    <string name="title_label">Title</string>
    <string name="description_label">Description</string>
    <string name="data_label">Date</string>
    <string name="time_label">Time</string>
    <string name="night_sleep">Night</string>
    <string name="daytime_sleep">Daytime</string>
    <string name="morning_sleep">Morning</string>
    <string name="simple_sleep">Simple</string>
    <string name="semi_sleep">Semi lucid</string>
    <string name="lucid_sleep">Lucid</string>
    <string name="type_sleep">Sleep</string>
    <string name="emotion">Mood</string>
    <string name="btn_delete_dream">Delete dream</string>
    <string name="diagram_label">Diagrams</string>
    <string name="table_label">Tables</string>
    <string name="types_of_dream_di">Type of dream</string>
    <string name="mood_di">Mood breakdown</string>
    <string name="sleep_time">Sleep time statistic</string>
    <string name="dream_chat">Chat for dreamers</string>
    <string name="hint_message">Type a message</string>
    <string name="label_text">Select option</string>
    <string name="error_msg_name">Enter name!</string>
    <string name="error_msg_surname">Enter surname!</string>
    <string name="error_msg_email">Enter email!</string>
    <string name="error_msg_password">Enter password!</string>
    <string name="error_msg_confirm_password">Enter confirm password!</string>
    <string name="error_msg_email_in">Email is not corrected!!</string>
    <string name="error_msg_password_not">Passwords did not match!</string>
    <string name="error_msg_password_length">Password length less than 6!</string>
    <string name="error_msg_date">Date not possible!</string>
</resources>