<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SingIn"
    android:background="@color/background_color">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="164dp"
            android:layout_gravity="center"
            android:layout_marginTop="140dp"
            android:layout_height="105dp"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintVertical_bias="0.436"
            app:srcCompat="@drawable/ic_baseline_circle_24" />

        <TextView
            android:id="@+id/textView"
            style="@style/CustomSplashScreenTittle"
            android:text="@string/app_name_phone"
            android:layout_gravity="center"/>
        <!--ввод email-->
        <TextView
            style="@style/CustomSplashScreenTittle.Label"
            android:layout_marginTop="40dp"
            android:text="@string/email_textview" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_input"
            style="@style/MyTextField">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_edit"
                style="@style/MyEditText.Email"  />
        </com.google.android.material.textfield.TextInputLayout>



        <!--ввод пароля-->
        <TextView
            style="@style/CustomSplashScreenTittle.Label"
            android:layout_marginTop="15dp"
            android:text="@string/password_textview" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_input"
            style="@style/MyTextField.Password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_edit"
                style="@style/MyEditText.Password" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--кнопка входа-->
        <Button
            android:id="@+id/button_sing_in"
            android:text="@string/button_sing_in"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            style="@style/MyButtonMain"/>

        <!--переход к регитсрации-->
        <TextView
            style="@style/CustomSplashScreenTittle.LabelAnswer"
            android:layout_marginTop="25dp"
            android:text="@string/answer_label" />

        <TextView
            android:id="@+id/go_to_sing_up"
            style="@style/CustomSplashScreenTittle.LabelAnswer1"
            android:text="@string/sing_up_label" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>