<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Account"
    android:background="@color/background_color">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/btnCanel"
            style="@style/CustomSplashScreenTittle.Label"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            android:text="@string/btn_cancel" />
        <TextView
            style="@style/CustomSplashScreenTittle.Label"
            android:layout_marginTop="5dp"
            android:textStyle="bold"
            android:layout_marginStart="70dp"
            android:text="@string/label_account" />
        <TextView
            android:id="@+id/btnDone"
            style="@style/CustomSplashScreenTittle.Profile"
            android:layout_marginTop="5dp"
            android:layout_marginStart="85dp"
            android:text="@string/btn_done" />

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="2dp"
        style="@style/MyLinear">
    </LinearLayout>

    <!-- фото-->
    <androidx.cardview.widget.CardView
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:cardCornerRadius="250dp"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        app:cardBackgroundColor="@color/background_color">

        <androidx.cardview.widget.CardView
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:cardCornerRadius="250dp"
            android:layout_gravity="center"
            app:cardBackgroundColor="@color/background_color">

            <ImageView
                android:id="@+id/photoChange"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:scaleType="centerCrop"
                android:src="@drawable/account_icon" />

        </androidx.cardview.widget.CardView>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/btnChangePhoto"
        style="@style/CustomSplashScreenTittle.Profile"
        android:layout_gravity="center"
        android:text="@string/btn_photo" />

    <LinearLayout
        android:layout_marginTop="5dp"
        style="@style/MyLinear">
    </LinearLayout>

    <!--измение имени-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            style="@style/CustomSplashScreenTittle.Label"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            android:text="@string/name_textview" />
        <EditText
            android:id="@+id/nameChange"
            android:layout_marginLeft="53dp"
            android:hint="@string/name_textview"
            style="@style/MyEditTextProfile"/>
    </LinearLayout>

    <!--измение фамилии-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            style="@style/CustomSplashScreenTittle.Label"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            android:text="@string/surname_textview" />
        <EditText
            android:id="@+id/surnameChange"
            android:layout_marginLeft="30dp"
            android:hint="@string/surname_textview"
            style="@style/MyEditTextProfile"/>
    </LinearLayout>

    <!--измение bio-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            style="@style/CustomSplashScreenTittle.Label"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            android:text="@string/bio" />
        <EditText
            android:id="@+id/bioChange"
            android:layout_marginLeft="77dp"
            android:hint="@string/bio"
            style="@style/MyEditTextProfile"/>
    </LinearLayout>

    <!--измение email-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            style="@style/CustomSplashScreenTittle.Label"
            android:layout_marginTop="5dp"
            android:textColor="@color/color_bottom"
            android:layout_marginStart="10dp"
            android:text="@string/email_textview" />
        <EditText
            android:id="@+id/emailChange"
            android:layout_marginLeft="60dp"
            android:textColor="@color/color_bottom"
            android:enabled="false"
            android:hint="@string/email_textview"

            style="@style/MyEditTextProfile.Email"/>
    </LinearLayout>

    <!--измение пароля-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            style="@style/CustomSplashScreenTittle.Label"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            android:text="@string/password_textview" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <EditText
                android:id="@+id/passwordChange"
                android:hint="@string/password_textview"
                style="@style/MyEditTextProfile.Password"/>

            <ImageView
                android:id="@+id/show_eye"
                android:layout_marginStart="240dp"
                style="@style/MyImageViewAccount"
                android:clickable="true"
                android:background="@drawable/eye" />
        </FrameLayout>


    </LinearLayout>

    <LinearLayout
        style="@style/MyLinear">
    </LinearLayout>
    <TextView
        android:id="@+id/btnLogout"
        style="@style/CustomSplashScreenTittle.Profile"
        android:layout_marginStart="10dp"
        android:text="@string/btn_log_ot" />

</LinearLayout>