<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChangeDream"
    android:orientation="vertical"
    android:background="@color/background_color">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_color"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/back"
            android:id="@+id/backToJournal"/>

        <TextView
            style="@style/CustomSplashScreenTittle.Label"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="120dp"
            android:textSize="20sp"
            android:text="@string/dream_label" />

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:padding="5dp"
            android:layout_marginStart="100dp"
            android:src="@drawable/add_new_dream"
            android:id="@+id/addNewDream"/>
    </LinearLayout>
    <!--ввод названия-->
    <TextView
        style="@style/CustomSplashScreenTittle"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:textSize="20sp"
        android:text="@string/title_label" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/title_input"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:boxBackgroundColor="@color/text_color"
        style="@style/MyTextFieldAddDream">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/title_edit"
            style="@style/MyEditTextAddDream"  />
    </com.google.android.material.textfield.TextInputLayout>

    <!--ввод описания-->
    <TextView
        style="@style/CustomSplashScreenTittle"
        android:layout_marginTop="5dp"
        android:layout_marginStart="10dp"
        android:textSize="20sp"
        android:text="@string/description_label" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/description_input"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:boxBackgroundColor="@color/text_color"
        style="@style/MyTextFieldAddDream">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/description_edit"
            style="@style/MyEditTextAddDream"  />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/background_color"
        android:orientation="vertical">
        <TextView
            style="@style/CustomSplashScreenTittle"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:textSize="20sp"
            android:text="@string/data_label" />

        <Button
            android:id="@+id/dateChoose"
            style="?android:spinnerStyle"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:text="Nov 09 2022"
            android:textSize="20sp"
            android:layout_marginStart="-5dp"
            android:textColor="@color/text_color"/>
    </LinearLayout>

    <!--время сна-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_color"
        android:orientation="vertical">

        <TextView
            style="@style/CustomSplashScreenTittle"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:layout_marginStart="10dp"
            app:singleSelection="true"
            android:text="@string/time_label" />

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/toggleButtonTime"
            android:layout_marginStart="10dp"
            android:layout_width="wrap_content"
            app:singleSelection="true"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/timeNight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?attr/materialButtonOutlinedStyle"
                android:textColor="@color/bottom_change"
                android:text="@string/night_sleep" />

            <Button
                android:id="@+id/timeMorning"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?attr/materialButtonOutlinedStyle"
                android:textColor="@color/bottom_change"
                android:text="@string/morning_sleep" />
            <Button
                android:id="@+id/timeDaytime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?attr/materialButtonOutlinedStyle"
                android:textColor="@color/bottom_change"
                android:text="@string/daytime_sleep" />

        </com.google.android.material.button.MaterialButtonToggleGroup>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_color"
        android:orientation="vertical">

        <TextView
            style="@style/CustomSplashScreenTittle"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:layout_marginStart="10dp"
            android:text="@string/type_sleep" />

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/toggleButtonType"
            android:layout_marginStart="10dp"
            android:layout_width="wrap_content"
            app:singleSelection="true"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/simpleSleep"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?attr/materialButtonOutlinedStyle"
                android:textColor="@color/bottom_change"
                android:text="@string/simple_sleep" />

            <Button
                android:id="@+id/semiSleep"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?attr/materialButtonOutlinedStyle"
                android:textColor="@color/bottom_change"
                android:text="@string/semi_sleep" />
            <Button
                android:id="@+id/lucidSleep"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="?attr/materialButtonOutlinedStyle"
                android:textColor="@color/bottom_change"
                android:text="@string/lucid_sleep" />

        </com.google.android.material.button.MaterialButtonToggleGroup>

    </LinearLayout>

    <TextView
        style="@style/CustomSplashScreenTittle"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:layout_marginStart="10dp"
        app:singleSelection="true"
        android:text="@string/emotion"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        app:cardBackgroundColor="@color/color_bottom"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp">

        <ImageView
            android:id="@+id/amazing"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="25dp"
            android:scaleType="centerCrop"
            android:src="@drawable/amizingdisable" />
        <ImageView
            android:id="@+id/good"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="83dp"
            android:scaleType="centerCrop"
            android:src="@drawable/gooddisable" />
        <ImageView
            android:id="@+id/normalImage"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="142dp"
            android:scaleType="centerCrop"
            android:src="@drawable/normaldisable" />
        <ImageView
            android:id="@+id/badNormal"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="201dp"
            android:scaleType="centerCrop"
            android:src="@drawable/badnormaldisable" />
        <ImageView
            android:id="@+id/bad"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="260dp"
            android:scaleType="centerCrop"
            android:src="@drawable/badendisable" />
    </androidx.cardview.widget.CardView>

</LinearLayout>