<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background_color"
    android:orientation="vertical">
    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/toggleButtonTime"
         android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        app:singleSelection="true"
        android:layout_gravity="center"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/diagram_btn"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            style="?attr/materialButtonOutlinedStyle"
            android:textColor="@color/button_selector"

            android:text="@string/diagram_label" />

        <Button
            android:id="@+id/table_btn"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            style="?attr/materialButtonOutlinedStyle"
            android:textColor="@color/button_selector"
            android:text="@string/table_label" />

    </com.google.android.material.button.MaterialButtonToggleGroup>

    <FrameLayout
        android:id="@+id/diagram_table"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <TextView
            style="@style/CustomSplashScreenTittle.Label"
            android:id="@+id/hideText"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/label_text"
            android:textAlignment="center"
            android:layout_marginTop="320dp"
            android:textSize="24sp" />
    </FrameLayout>
</LinearLayout>